--- a/Browser/style.css
+++ b/Browser/style.css
@@ -2,7 +2,11 @@
     background: linear-gradient(120deg, rgba(255,255,255,0.6), rgba(255,255,255,0.3));
     border-radius: 5px;
     border: solid 1px rgba(255,255,255,0.7);
-    box-shadow: 0px 4px 30px rgba(0,0,0,0.4);
+}
+
+.button:hover {
+    opacity: 0.5;
+    transition: opacity 0.5s ease-in-out;
 }
 
 .button-layered {
@@ -10,6 +14,20 @@
     border: none;
 }
 
+.button-layered:hover {
+    opacity: 0.5;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.wkview-load-progress-bar {
+    background-color: white;
+    color: green;
+}
+
 .window-body {
     background-color: rgba(255, 255, 255, 0);
+}
+
+.webview {
+    border-radius: 5px;
 }
